# ai_agent_poc

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-cloudrun.yml  web-deploy.yml  web-lint.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routes/: answer.py  health.py  question.py  report.py  session.py  swot.py
backend/app/schemas/: answer.py  common.py  question.py  report.py  session.py  swot.py
backend/app/services/: answer_service.py  llm_service.py  question_service.py  report_service.py  session_service.py  swot_service.py
backend/app/storage/: memory_store.py
web/: .env.development  .env.local-integration  .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.jsonc
web/src/: app.d.ts  app.html
web/src/components/layouts/footer/: Footer.svelte
web/src/components/layouts/nav/: Nav.svelte
web/src/components/layouts/topbar/: Topbar.stories.svelte  Topbar.svelte
web/src/components/ui/button/: Button.stories.svelte  Button.svelte
web/src/components/ui/example-button/: Button.stories.svelte  Button.svelte
web/src/components/ui/quick-input/: QuickInput.svelte  index.ts
web/src/config/: env.ts
web/src/lib/: api-client.ts  query-client.ts
web/src/routes/: +layout.svelte  +page.ts  layout.css
web/src/routes/(app)/: +layout.svelte  +page.svelte
web/src/testing/: vitest.setup.ts
web/src/testing/mocks/: index.ts  utils.ts
(+39 files in other folders)
