[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Pon0218",email = "patrick860218@email.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=2.21.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.5.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.41.0"}

